# Kiro-Gateway

./: .dockerignore  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.cunzhi-memory/: context.md  metadata.json
.github/workflows/: build-artifacts.yaml  build.yaml
.serena/cache/rust/: document_symbols.pkl  raw_document_symbols.pkl
.spec-workflow/user-templates/: README.md
admin-ui/: package-lock.json  package.json  vite.config.ts
admin-ui/src/: App.tsx  main.tsx
admin-ui/src/api/: credentials.ts
admin-ui/src/components/: about-dialog.tsx  add-credential-dialog.tsx  balance-dialog.tsx  dashboard.tsx
admin-ui/src/components/ui/: badge.tsx  dialog.tsx
admin-ui/src/hooks/: use-credentials.ts
admin-ui/src/types/: api.ts
docs/: CROSS_PLATFORM_BUILD_FIX.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  compile_output.txt  config.json  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/icons/: icon.icns
src-tauri/src/: kiro_server.rs  main.rs  model_lock.rs  token.rs
src-tauri/src/admin/: error.rs  handlers.rs  local_account.rs  middleware.rs  mod.rs  router.rs  service.rs  types.rs
src-tauri/src/admin_ui/: mod.rs  router.rs
src-tauri/src/anthropic/: converter.rs  handlers.rs  middleware.rs  mod.rs  router.rs  stream.rs  types.rs  websearch.rs
src-tauri/src/common/: auth.rs  mod.rs
src-tauri/src/kiro/: machine_id.rs  provider.rs  token_manager.rs
src-tauri/src/kiro/model/: credentials.rs  mod.rs  usage_limits.rs
src-tauri/src/kiro/parser/: crc.rs  decoder.rs  frame.rs
src-tauri/src/logs/: mod.rs
src-tauri/src/model/: config.rs
src/api/: credentials.ts
src/components/: about-section.tsx  add-credential-dialog.tsx  balance-dialog.tsx  confirm-dialog.tsx  dashboard.tsx  export-dialog.tsx  update-dialog.tsx
src/components/ui/: progress.tsx
src/hooks/: use-credentials.ts
src/lib/: storage.ts  utils.ts
src/types/: api.ts
