[package]
name = "kiro-gateway"
version = "1.0.0"
edition = "2021"

[profile.release]
lto = true
strip = true

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
http = "1.0"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v1", "v4", "fast-rng"] }
fastrand = "2"
sha2 = "0.10"
hex = "0.4"
crc = "3"           # CRC32C 计算
bytes = "1"         # 高效的字节缓冲区
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4.5", features = ["derive"] }
urlencoding = "2"
parking_lot = "0.12"  # 高性能同步原语
subtle = "2.6"        # 常量时间比较（防止时序攻击）
dirs = "5"            # 跨平台获取用户目录
lazy_static = "1"     # 全局静态变量

[target.'cfg(windows)'.dependencies]
winreg = "0.55"       # Windows 注册表访问

# GUI Dependencies
# eframe = "0.29.1" # Deprecated for Tauri
# egui = "0.29.1"
# rfd = "0.15.0"
crossbeam-channel = "0.5" # For thread communication

# Tauri Dependencies
tauri = { version = "=2.9.5", features = [] }
tauri-plugin-shell = "=2.2.0"
tauri-plugin-dialog = "=2.2.0"
tauri-plugin-fs = "=2.2.0"


[build-dependencies]
tauri-build = { version = "=2.5.3", features = [] }
