[package]
name = "kiro-gateway"
version = "1.0.0"
edition = "2021"

[profile.release]
lto = true
strip = true

[dependencies]
# 所有平台通用的依赖
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v1", "v4", "fast-rng"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Tauri Dependencies
tauri = { version = "2", features = ["devtools", "tray-icon"] }
tauri-plugin-shell = "2"

[target.'cfg(windows)'.dependencies]
# Windows 平台特定依赖
winreg = "0.55"
axum = "0.8"
reqwest = { version = "0.12", features = ["stream", "json", "socks"] }
http = "1.0"
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4.5", features = ["derive"] }
fastrand = "2"
sha2 = "0.10"
hex = "0.4"
crc = "3"
bytes = "1"
urlencoding = "2"
parking_lot = "0.12"
subtle = "2.6"
dirs = "5"
lazy_static = "1"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS 平台特定依赖
axum = "0.8"
reqwest = { version = "0.12", features = ["stream", "json", "socks"] }
http = "1.0"
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4.5", features = ["derive"] }
fastrand = "2"
sha2 = "0.10"
hex = "0.4"
crc = "3"
bytes = "1"
urlencoding = "2"
parking_lot = "0.12"
subtle = "2.6"
dirs = "5"
lazy_static = "1"

[target.'cfg(target_os = "linux")'.dependencies]
# Linux 平台特定依赖
axum = "0.8"
reqwest = { version = "0.12", features = ["stream", "json", "socks"] }
http = "1.0"
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4.5", features = ["derive"] }
fastrand = "2"
sha2 = "0.10"
hex = "0.4"
crc = "3"
bytes = "1"
urlencoding = "2"
parking_lot = "0.12"
subtle = "2.6"
dirs = "5"
lazy_static = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
